# drones_rope_planning

./: CMakeLists.txt  README.md  package.xml
config/: cylinders_obstacles.yaml  cylinders_obstacles_sim.yaml  prob_definitiion.yaml  prob_definitiion_offline.yaml
include/: custom_mesh.hpp  custom_mesh_robust.hpp  moving_obstacles.hpp
include/catenaries/: catenary.hpp  math_utils.hpp
include/ompl_example_2d/: custom_goals.hpp  custom_objectives.hpp  fcl_checker.hpp  fcl_checker_base.hpp  fcl_checker_offline.hpp  fcl_checker_realtime.hpp  fcl_mesh.hpp  ompl_example_2d.hpp  optim_objectives.hpp  problem_params.hpp  stlloader.hpp
include/traj_generation/: traj_min_jerk.hpp  traj_min_snap.hpp
launch/: demo_obs_avoid.rviz  drones_setup.launch  obstacle_avoidance.launch  obstacle_avoidance_debug.launch  obstacles_viz.launch  ompl_example_2d.launch  path_planning_offline.launch  realtime_moving_obstacles.launch  realtime_moving_obstacles_auto.launch  realtime_moving_obstacles_demo.launch  realtime_moving_obstacles_demo_debug.launch  test.rviz  traj_generation_test.launch  visualize.launch  visualize_dynamic.launch
msg/: CylinderObstacleData.msg  rigid_body_dynamic_path.msg
resources/collada/: custom_triangle_robot.dae
resources/paths/: path.txt
scripts/: manual_start_resetting_vis.py  moving_obstacles_pub.py  path_vis.py  path_vis_dynamic.py  path_vis_dynamic_realtime.py  plots.py  realtime_interface.py  realtime_interface_sim.py  realtime_obstacles_viz.py  static_env_visualization.py  traj_gen.py
src/: custom_mesh.cpp  custom_mesh_robust.cpp  custom_objectives.cpp  fcl_checker.cpp  fcl_checker_base.cpp  fcl_checker_offline.cpp  fcl_checker_realtime.cpp  fcl_mesh.cpp  moving_obstacles.cpp  ompl_example_2d.cpp  ompl_example_2d_node.cpp  optim_objectives.cpp  planning_offline_node.cpp  planning_realtime_node.cpp  problem_params.cpp  stlloader.cpp
src/catenaries/: catenary.cpp  math_utils.cpp
src/traj_generation/: example1_node.cpp  min_jerk_traj_generator.cpp
srv/: PlanningRequest.srv
